[package]
name = "bevy-3dtest"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy-inspector-egui = "0.28.1" # https://crates.io/crates/bevy-inspector-egui
bevy_panorbit_camera = "0.21" # https://github.com/Plonq/bevy_panorbit_camera 

[dependencies.bevy]
version = "0.15" # https://crates.io/crates/bevy
features = ["dynamic_linking","serialize", "wayland","bevy_remote"]